home page spacing issue fix

--- a/public/Themes/Thrivewellrx.Theme.ZePeptides/assets/scss/components/_client.scss
+++ b/public/Themes/Thrivewellrx.Theme.ZePeptides/assets/scss/components/_client.scss
@@ -1,127 +1,119 @@
 @use "../base/variables" as *;
 
 .feedback {
-  position: relative;
-  z-index: 1;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
+	position: relative;
+	z-index: 1;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center center;
 
-  &__block {
-    padding: 160px 0 130px;
+	&__alt {
+		padding-bottom: 100px;
+	}
 
-    border-radius: 40px;
-  }
+	h3 {
+		text-align: center;
+	}
 
-  &__alt {
-    padding-bottom: 100px;
-  }
+	&__slider {
+		padding: 60px 0 !important;
+	}
 
-  h3 {
-    text-align: center;
-  }
+	&__slide {
+		padding: 30px;
+		border-radius: 20px;
+		height: auto !important;
+		background: $white;
+		display: flex !important;
+		flex-direction: column;
+		border: 1px solid $primary-light;
+		box-shadow: 0px 0px 30px 0px #27005d14;
+	}
 
-  &__slider {
-    padding: 60px 0 !important;
-  }
+	&__client-info {
+		margin-top: auto;
+	}
 
-  &__slide {
-    padding: 30px;
-    border-radius: 20px;
-    height: auto !important;
-    background: $white;
-    display: flex !important;
-    flex-direction: column;
-    border: 1px solid $primary-light;
-    box-shadow: 0px 0px 30px 0px #27005D14;
-  }
+	&__patient {
+		display: flex;
+		align-items: center;
 
-  &__client-info {
-    margin-top: auto;
-  }
+		img {
+			width: 60px;
+			height: 60px;
+			border-radius: 50%;
+			object-fit: cover;
+		}
 
-  &__patient {
-    display: flex;
-    align-items: center;
+		p {
+			font-size: 16px;
+			margin-bottom: 0;
+			margin-left: 12px;
+			color: $gray-dark;
+		}
 
-    img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
+		&__name {
+			font-weight: 700;
+			font-size: $fs-16 !important;
+		}
 
-    p {
-      font-size: 16px;
-      margin-bottom: 0;
-      margin-left: 12px;
-      color: $gray-dark;
-    }
+		&__designation {
+			font-weight: 400;
+			color: $white !important;
+		}
+	}
 
-    &__name {
-      font-weight: 700;
-      font-size: $fs-16 !important;
-    }
+	&__desc {
+		margin: 25px 0;
+		font-size: $fs-18;
+		font-weight: 400;
+		color: $gray-dark;
+		text-align: start;
+	}
 
-    &__designation {
-      font-weight: 400;
-      color: $white !important;
-    }
-  }
+	&__review {
+		margin-bottom: 30px;
 
-  &__desc {
-    margin: 25px 0;
-    font-size: $fs-18;
-    font-weight: 400;
-    color: $gray-dark;
-    text-align: start;
-  }
-
-  &__review {
-    margin-bottom: 30px;
-
-    i {
-      background: $orange;
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-  }
-
-
+		i {
+			background: $orange;
+			background-clip: text;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+	}
 }
 
 .dots-slider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-  .swiper-pagination-bullet {
-    background-color: rgba($primary, 0.3);
-    width: 26px;
-    height: 8px;
-    border-radius: 24px;
-    opacity: 1;
-  }
+	.swiper-pagination-bullet {
+		background-color: rgba($primary, 0.3);
+		width: 26px;
+		height: 8px;
+		border-radius: 24px;
+		opacity: 1;
+	}
 
-  .swiper-pagination-bullet-active {
-    background-color: $primary;
-    width: 64px;
-    height: 8px;
-    border-radius: 24px;
-  }
+	.swiper-pagination-bullet-active {
+		background-color: $primary;
+		width: 64px;
+		height: 8px;
+		border-radius: 24px;
+	}
 
-  &--mob {
-    display: none;
+	&--mob {
+		display: none;
 
-    .swiper-pagination-bullet {
-      width: 15px;
-      height: 6px;
-      border-radius: 10px;
-    }
+		.swiper-pagination-bullet {
+			width: 15px;
+			height: 6px;
+			border-radius: 10px;
+		}
 
-    .swiper-pagination-bullet-active {
-      width: 25px;
-    }
-  }
+		.swiper-pagination-bullet-active {
+			width: 25px;
+		}
+	}
 }
